[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Main/GrayscaleColor.shader" type="Shader" id=1]
[ext_resource path="res://src/Main/Viewportshaders.gd" type="Script" id=2]
[ext_resource path="res://src/Main/SetViewportSize.gd" type="Script" id=3]
[ext_resource path="res://src/Main/ChromaticAberration.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/gray_ratio = Vector3( 0.21, 0.72, 0.07 )
shader_param/ignore_pure_red = true
shader_param/ignore_pure_green = false
shader_param/ignore_pure_blue = false
shader_param/threshold = 0.03

[sub_resource type="GradientTexture" id=2]
width = 1

[sub_resource type="OpenSimplexNoise" id=6]
seed = 2

[sub_resource type="NoiseTexture" id=7]
seamless = true
noise = SubResource( 6 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/offset = 1.0
shader_param/amount = 1.0
shader_param/ignore_pure_red = null
shader_param/ignore_pure_green = null
shader_param/ignore_pure_blue = null
shader_param/noise = SubResource( 7 )

[sub_resource type="ShaderMaterial" id=8]

[node name="Viewportshaders" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="GrayscaleBuffer" type="BackBufferCopy" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
copy_mode = 2
rect = Rect2( 0, 0, 800, 480 )
script = ExtResource( 3 )

[node name="GrayscaleColor" type="TextureRect" parent="GrayscaleBuffer"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChromaticAberrationBuffer" type="BackBufferCopy" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
copy_mode = 2
rect = Rect2( 0, 0, 800, 480 )
script = ExtResource( 3 )

[node name="ChromaticAberration" type="TextureRect" parent="ChromaticAberrationBuffer"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RainBuffer" type="BackBufferCopy" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
copy_mode = 2
rect = Rect2( 0, 0, 800, 480 )
script = ExtResource( 3 )

[node name="Rain" type="TextureRect" parent="RainBuffer"]
visible = false
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
texture = SubResource( 2 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}
